tests/baselines/reference/privateNameInObjectLiteral-2.errors.txt
<<<<<<< HEAD
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-2.ts(2,5): error TS18016: Private names are not allowed outside class bodies.
=======
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-2.ts(2,5): error TS18016: Private identifiers are not allowed outside class bodies.
>>>>>>> Add private instance field transformation, pr feedback


==== tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-2.ts (1 errors) ====
    const obj = {
        #foo() {
        ~~~~
<<<<<<< HEAD
!!! error TS18016: Private names are not allowed outside class bodies.
=======
!!! error TS18016: Private identifiers are not allowed outside class bodies.
>>>>>>> Add private instance field transformation, pr feedback
    
        }
    };
    